Project 2/force-app/main/default/objects/Questions__c/Questions__c.object-meta.xml
<CustomObject>
    <label>Questions</label>
    <nameField>
        <label>Questions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>