Project 2/force-app/main/default/objects/Questions__c/fields/B__c.field-meta.xml
<CustomField>
    <fullName>B__c</fullName>
    <label>B</label>
    <length>100</length>
    <type>Text</type>
</CustomField>