Project 2/force-app/main/default/objects/Questions__c/fields/CorrectAnswer__c.field-meta.xml
<CustomField>
    <fullName>CorrectAnswer__c</fullName>
    <label>CorrectAnswer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>