Project 2/force-app/main/default/objects/Questions__c/fields/D__c.field-meta.xml
<CustomField>
    <fullName>D__c</fullName>
    <label>D</label>
    <length>100</length>
    <type>Text</type>
</CustomField>