Project 2/force-app/main/default/objects/Questions__c/fields/Private_Answers__c.field-meta.xml
<CustomField>
    <fullName>Private_Answers__c</fullName>
    <label>Private Answers</label>
    <length>100</length>
    <type>Text</type>
</CustomField>