Project 2/force-app/main/default/objects/Questions__c/fields/Wrong_Answer_1__c.field-meta.xml
<CustomField>
    <fullName>Wrong_Answer_1__c</fullName>
    <label>Wrong Answer 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>