Project 2/force-app/main/default/objects/Questions__c/validationRules/Capital_first.validationRule-meta.xml
<ValidationRule>
    <fullName>Capital_first</fullName>
    <active>true</active>
    <errorConditionFormula>LEFT(UPPER(  Name  ),1) &lt;&gt; LEFT( Name ,1)</errorConditionFormula>
    <errorMessage>First letter not capitalized</errorMessage>
</ValidationRule>