Project 2/force-app/main/default/objects/Questions__c/validationRules/Question_Name_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Question_Name_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>REGEX(Name, &quot;[A-Z]{1}[a-z]{4,200}&quot;)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>The question must begin with a capital letter and also must be between 5 characters and 200 characters.</errorMessage>
</ValidationRule>